# lab_converter

./: Base10_Hex.csv  README.md  main.py  pyproject.toml
lab_converter/: hex.py  rgb.py
lab_converter/lab2xyz/: xyz.py
tests/: test_hex.py  test_read_conversion.py  test_rgb.py  test_rgb_value_checker.py  test_xyz.py
