[tool.poetry]
name = "lab-converter"
version = "0.1.0"
description = ""
authors = ["Justin Cohen <jcohen@curtispackaging.com>"]
readme = "README.md"
packages = [{include = "lab_converter"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
colormath = "^3.0.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
